fixed table overflow

--- a/homeAdmin.css
+++ b/homeAdmin.css
@@ -1,4 +1,4 @@
-body{
+body {
   background-color: #e6e6e6;
   display: flex;
   justify-content: center;
@@ -7,27 +7,26 @@ body{
   flex-direction: column;
 }
 
-*{
+* {
   height: auto;
   margin: 0 auto;
   font-family: sans-serif;
   box-sizing: border-box;
 }
 
-h1{
+h1 {
   color: black;
   text-align: center;
 }
 
 .sidenav {
   overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding: 10px;
+  background-color: #333;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 10px;
 }
-
 
 .sidenav a {
   float: left;
@@ -38,50 +37,17 @@ h1{
   font-size: 17px;
 }
 
-
 .sidenav a:hover {
   background-color: #ddd;
   color: black;
 }
 
-
 .sidenav a.active {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
 }
 
-#ticketsTable{
-  border-collapse: collapse;
-}
-
-#ticketsTable tr{
-  background-color: #eee;
-  border-top: 1px solid #fff;
-}
-
-#ticketsTable tr:hover{
-  background-color: #ccc;
-}
-
-#ticketsTable th{
-  background-color: #bfbfbf;
-  height: 70px;
-  width: 10%;
-}
-
-#ticketsTable th, #ticketsTable td {
-    padding: 3px 5px;
-    text-align: center;
-}
-#ticketsTable td:hover {
-    cursor: pointer;
-}
-
-.ticket-row{
-  cursor: pointer;
-}
-
-.acc-modal-bg{
+.acc-modal-bg {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -96,9 +62,9 @@ h1{
   opacity: 0;
   transition: visibility 0s, opacity 0.5s;
 }
-.acc-modal{
+.acc-modal {
   position: relative;
-  background-color: rgba(230,230,230,0.9);
+  background-color: rgba(230, 230, 230, 0.9);
   width: 50%;
   height: 50%;
   display: flex;
@@ -112,7 +78,7 @@ h1{
   border-radius: 25px;
 }
 
-.acc-modal-close{
+.acc-modal-close {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -120,7 +86,7 @@ h1{
   cursor: pointer;
 }
 
-.modal-bg{
+.modal-bg {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -135,19 +101,19 @@ h1{
   opacity: 0;
   transition: visibility 0s, opacity 0.5s;
 }
-.acc-bg-active{
+.acc-bg-active {
   visibility: visible;
   opacity: 1;
 }
 
-.bg-active{
+.bg-active {
   visibility: visible;
   opacity: 1;
 }
 
-.modal{
+.modal {
   position: relative;
-  background-color: rgba(230,230,230,0.9);
+  background-color: rgba(230, 230, 230, 0.9);
   width: 50%;
   height: 50%;
   display: flex;
@@ -161,10 +127,37 @@ h1{
   border-radius: 25px;
 }
 
-.modal-close{
+.modal-close {
   position: absolute;
   top: 10px;
   right: 10px;
   font-weight: bold;
   cursor: pointer;
+}
+
+.addTicketDiv {
+  width: 30%;
+}
+
+.addTicketButton {
+  width: 100%;
+  background: #555;
+  padding: 10px 15px;
+  color: #fff;
+  border-radius: 5px;
+  margin: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.addTicketButton:hover {
+  width: 100%;
+  margin: 10px;
+  color: black;
+  background: #bfbfbf;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+  border: none;
 }
